gcc/testsuite/gdc.test/compilable/imports/bug8922.d
module imports.bug8922;
