gcc/testsuite/gdc.test/fail_compilation/imports/bar11136.d
module ice11136.bar11136;
